Split member-service tests: *Test (Surefire) vs *IT (Failsafe)
All three Testcontainers-backed test classes were named *IntegrationTest,
which still matches Surefire's default *Test.java include pattern - so
even plain `mvn test` (and anything built on top of it: package, install)
silently required Docker. Renamed to the standard *IT.java convention and
added maven-failsafe-plugin bound to integration-test/verify: Surefire's
default patterns don't match *IT.java, so it naturally excludes them, and
Failsafe naturally only includes them. `mvn test` is now fully Docker-free
everywhere in this module; only `mvn verify` touches Docker at all.

Also verified (not assumed) how tests actually run in every other module
on this machine and documented it in CLAUDE.md: auth-service and common
have nothing to run; api-gateway, eureka-server, and resource-service all
fail their single contextLoads() test on this JDK (21) with the same
InaccessibleObjectException - Spring 5.0.6's cglib hitting a JPMS module
restriction introduced in JDK 16, present regardless of anything in this
session's changes. A quick --add-opens didn't clear it; these services
were deliberately left on Boot 2.0.2 (see "Why member-service is on a
different Boot version" in CLAUDE.md), so the real fix is out of scope.